GNOME Bugzilla – Bug 646302
segfault around sidebar drag'n drop
Last modified: 2011-04-11 16:00:15 UTC
I checked the fixed eject icon in the sidebar and it worked fine, but it left me with the cursor dragging my first bookmark, and then crashed. (I failed to reproduce it) Core was generated by `nautilus /media/F2A2-D2F1'. Program terminated with signal 6, Aborted.
+ Trace 226514
Created attachment 184804 [details] [review] I can reproduce this here; attached patch fixes it. places-sidebar: don't return TRUE in button-release when we eject Otherwise the GtkTreeView default handler won't run cleaning up what it set up in button-press-event and the next motion-event will trigger the DnD to begin.
Pushed to master now.
*** Bug 647381 has been marked as a duplicate of this bug. ***