places-sidebar: don't return TRUE in button-release when we eject

Otherwise the GtkTreeView default handler won't run cleaning up
what it set up in button-press-event and the next motion-event will
trigger the DnD to begin.

https://bugzilla.gnome.org/show_bug.cgi?id=646302