src/nautilus-places-sidebar.c
@@ -2688,7 +2688,6 @@ bookmarks_button_release_event_cb (GtkWidget *widget,
 	GtkTreePath *path;
 	GtkTreeModel *model;
 	GtkTreeView *tree_view;
-	gboolean ret;
 
 	path = NULL;
 
@@ -2697,9 +2696,10 @@ bookmarks_button_release_event_cb (GtkWidget *widget,
 	}
 
 	if (clicked_eject_button (sidebar, &path)) {
-		ret = eject_or_unmount_bookmark (sidebar, path);
+		eject_or_unmount_bookmark (sidebar, path);
 		gtk_tree_path_free (path);
-		return ret;
+
+		return FALSE;
 	}
 
 	tree_view = GTK_TREE_VIEW (widget);
